--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,13 @@
     <title>TestCenter</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/angular-ui-tree.min.css">
+    <link rel="stylesheet" type="text/css" href="css/ui-grid.min.css">
     <link rel="stylesheet" type="text/css" href="css/angular-resizable.css">
+    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_371097_6qmq40vb5rlo9a4i.css">
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/common.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/modal.css">
 </head>
 <body>
     <div ui-view></div>
