--- a/app/tpls/home/main/bug/projectBugDetail.html
+++ b/app/tpls/home/main/bug/projectBugDetail.html
@@ -1,240 +1,169 @@
 <style type="text/css">
-.mask {
-    display: none;
-    position: fixed;
-    z-index: 1100;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-}
-
-.preFun {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    right: 10px;
-    margin-top: -28px;
-}
-
-.preFun {
-    cursor: pointer;
-}
-
-.mask-box {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background: url(images/op_bg.png) repeat;
-}
-
-.big-pic-wrap {
-    position: absolute;
-    left: 50%;
-    background: none;
-    max-width: 90%;
-    max-height: 80%;
-    top: 50%;
-    overflow: auto;
-}
-
-
-.wrapper {margin: 0 auto; width: 960px; }
-.pdf-controls { width: 100%; display: block; background: #eee; padding: 1em;}
-.rotate0 {-webkit-transform: rotate(0deg); transform: rotate(0deg); }
-.rotate90 {-webkit-transform: rotate(90deg); transform: rotate(90deg); }
-.rotate180 {-webkit-transform: rotate(180deg); transform: rotate(180deg); }
-.rotate270 {-webkit-transform: rotate(270deg); transform: rotate(270deg); }
-.fixed { position: fixed; top: 0; left: calc(50% - 480px); z-index: 100; width: 100%; padding: 1em; background: rgba(238, 238, 238,.9); width: 960px; }
-
-/*关闭大图按钮*/
 </style>
-<div class="projectDetailBox" ng-controller="projectBugDetailCtrl">
-    <h1 class="detailTitle">缺陷详情</h1>
-    <div class="bugName">
-        <span class="bugId">233</span> 缺陷名称
+<div class="projectDetailBox">
+    <div class="detailTitle">
+        <span class="floatleft bugId">233</span>
+        <span class="bugName text_ellipsis">缺陷名称</span>
+        <input type="button" class="btndefault btndefault_blue floatright" name="" value="保存">
     </div>
-    <div class="bugChangeBox" ng-init="defectState='1'">
-        <ul>
-            <li>
-                <span>缺陷状态：</span>
-                <select class="selectNormal" ng-model="defectState">
-                    <option value="1">待审</option>
-                    <option value="2">驳回</option>
-                </select>
-            </li>
-            <li>
-                <span>角色：</span>
-                <select class="selectNormal">
-                    <option>已处理</option>
-                    <option>未处理</option>
-                </select>
-            </li>
-            <li>
-                <span>处理人：</span>
-                <select class="selectNormal">
-                    <option>已处理</option>
-                    <option>未处理</option>
-                </select>
-            </li>
-            <li>
-                <span>驳回类型：</span>
-                <select class="selectNormal">
-                    <option>已处理</option>
-                    <option>未处理</option>
-                </select>
-            </li>
-            <li>
-                <span class="floatleft">驳回理由：</span>
-                <textarea class="floatleft projectTextarea"></textarea>
-            </li>
-            <li>
-                <input class="btn_blue" type="button" value="提交">
-            </li>
-            <div class="clear"></div>
-        </ul>
-    </div>
-    <div class="bugDetailBox">
+    <div class="bugDetailBox" ng-init="isAttribute=1">
         <div class="tab">
-            <span ng-class="{current:isAttribute==0}" ng-click="isAttribute=0">缺陷描述</span>
-            <span ng-class="{current:isAttribute==1}" ng-click="isAttribute=1">缺陷属性</span>
-            <span ng-class="{current:isAttribute==2}" ng-click="isAttribute=2">操作历史</span>
+            <span ng-class="{current:isAttribute==1}" ng-click="isAttribute=1">缺陷描述</span>
+            <span ng-class="{current:isAttribute==2}" ng-click="isAttribute=2">缺陷属性</span>
+            <span ng-class="{current:isAttribute==3}" ng-click="isAttribute=3">操作历史</span>
         </div>
-        <div class="attribute" ng-show="isAttribute==0">
-            <div>
-                <div class="attributeTitle">
+        <!-- 缺陷描述 -->
+        <div class="detailAttribute" ng-show="isAttribute==1" bn-document-click="addDescribe=false">
+            <div class="addDescribe" ng-class="{addDescribeopen:addDescribe}" ng-click="$event.stopPropagation();addDescribe=true">
+                <textarea placeholder="追加描述"></textarea>
+                <i class="iconfont icon-bianji"></i>
+                <div class="addDescribeFunc">
+                    <div class="flex"></div>
+                    <input ng-click="event.stopPropagation();" type="button" name="" class="btndefault btndefault_blue floatright" value="追加描述">
+                </div>
+            </div>
+            <div class="describeBox">
+                <div class="describeTitle">
                     缺陷描述
                 </div>
-                <div class="attributeP">从1962年诞生的第一台虚拟现实设备Sensorama开始算，虚拟现实已经走过了54个年头。随着2016年初阿里巴巴近8亿美元投资Magic Leap，中国的“VR创业潮”正式拉开了帷幕，2016年也被称为中国虚拟现实的元年，这期间涌现了大量的创业公司，其中不乏佼佼者，逐渐走上了引领世界VR发展的道路。
-                <p>从1962年诞生的第一台虚拟现实设备Sensorama开始算，虚拟现实已经走过了54个年头,从1962年诞生的第一台虚拟现实设备Sensorama开始算，虚拟现实已经走过了54个年头</p>
-                <p>从1962年诞生的第一台虚拟现实设备Sensorama开始算，虚拟现实已经走过了54个年头</p>
+                <div class="describeList">
+                    <div class="describeListLi">
+                        <i class="iconfont icon-bianji"></i> 【aiyina】添加描述：evalbert 修改任务隶属项目 原隶属项目：纯纯粹粹-由evalbert复制 新隶属项目：纯纯粹粹
+                        <span class="describeListLiTime">2017-06-19 19:00</span>
+                    </div>
                 </div>
             </div>
-            <div>
-                <div class="attributeTitle">
+            <div class="describeBox">
+                <div class="describeTitle">
                     缺陷附件
                 </div>
-                <ul class="attributeFile">
-                    <li>
-                        <img src="images/file_word.png">
-                        <span>测试需求文档.doc</span>
-                        <em class="f_blue2">预览</em>
-                    </li>
-                    <li>
-                        <img src="images/file_pic.png">
-                        <span>图片1.png</span>
-                        <em class="f_blue2" enlarge-pic>预览</em>
-                    </li>
-                    <div class="mask">
-                        <div class="mask-box" close-Pic>
+                <div class="describeList fileuploadBox">
+                    <div class="fileselectBox">
+                        <div class="floatleft btn_add btn_addfile"><span class="cicleicon"><i class="iconfont icon-createtask"></i></span>选择文件
+                            <input class="inputfile" type="file" value="选择文件">
                         </div>
-                        <div class="big-pic-wrap">
-                            <img src="{{src}}" class="bigPic floatleft">
-                            <div class="clear"></div>
-                        </div>
-                        <div class="preFun" ng-hide="data.imgs.length==1">
-                            <img ng-click="preImg()" class="floatleft" src="images/imgShow_left1.png">
-                            <img ng-click="nextImg()" class="floatright" src="images/imgShow_right1.png">
-                        </div>
-                        <!-- <span class="noneImg">没有其他图片</span> -->
+                        <span class="floatright">文件最大不超过30M</span>
                     </div>
-                </ul>
-            </div>
-        </div>
-        <div class="attribute" ng-show="isAttribute==1">
-            <div>
-                <ul class="attributeNormal">
-                    <li>
-                        <h1>提交者：</h1>
-                        <h2>evalbert</h2>
-                    </li>
-                    <li>
-                        <h1>缺陷类别：</h1>
-                        <h2>一般</h2>
-                    </li>
-                    <li>
-                        <h1>关联用例ID：</h1>
-                        <h2>222222</h2>
-                    </li>
-                    <li>
-                        <h1>提交时间：</h1>
-                        <h2>2016-10-12 19：00</h2>
-                    </li>
-                    <li>
-                        <h1>缺陷等级：</h1>
-                        <h2>高</h2>
-                    </li>
-                    <li>
-                        <h1>最后期限：</h1>
-                        <h2>登录</h2>
-                    </li>
-                    <li>
-                        <h1>项目模块：</h1>
-                        <h2>登录</h2>
-                    </li>
-                    <li>
-                        <h1>出现频率：</h1>
-                        <h2>频繁</h2>
-                    </li>
-                    <li>
-                        <h1>当前状态：</h1>
-                        <h2>进行中</h2>
-                    </li>
-                    <div class="clear"></div>
-                </ul>
-            </div>
-            <div>
-                <div class="attributeTitle">
-                    自定义属性
+                    <ul class="fileList">
+                        <li ng-repeat="v in range(2) track by $index">
+                            <span class="fileIcon fileIcon-doc"></span>
+                            <div class="fileName">
+                                测试需求文档.doc
+                                <i class="iconfont icon-close"></i>
+                            </div>
+                            <div class="fileFooter">
+                                <div class="fileSize">
+                                    <div class="progress progressDefault" ng-hide="fileuploadSize==-1;">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{fileuploadSize+'%'}}">
+                                            {{fileuploadSize+'%'}}
+                                        </div>
+                                    </div>
+                                    <div class="size" ng-show="fileuploadSize==-1;">180kb
+                                        <div class="filemoreFunc dropdownDefault floatright treefunicon" dropdown>
+                                            <i class="iconfont icon-gengduo floatright tooltipdefaulticon" dropdown-toggle></i>
+                                            <ul class="dropdown-menu dropdown-menu-right transition" dropdown-menu role="menu">
+                                                <span class="triangle"></span>
+                                                <li><i class="iconfont icon-addpeople_fill"></i><span>下载</span></li>
+                                                <li><i class="iconfont icon-addpeople_fill"></i><span>删除</span></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-                <ul class="attributeNormal">
-                    <li>
-                        <h1>提交者：</h1>
-                        <h2>evalbert</h2>
-                    </li>
-                    <li>
-                        <h1>缺陷类别：</h1>
-                        <h2>一般</h2>
-                    </li>
-                    <li>
-                        <h1>关联用例ID：</h1>
-                        <h2>222222</h2>
-                    </li>
-                    <li>
-                        <h1>提交时间：</h1>
-                        <h2>2016-10-12 19：00</h2>
-                    </li>
-                    <div class="clear"></div>
-                </ul>
             </div>
         </div>
-        <div class="history" ng-show="isAttribute==2">
-            <div class="bugChangeBox" style="padding: 0px;">
-                <ul>
-                    <li>
-                        <span class="floatleft">追加描述：</span>
-                        <textarea class="floatleft projectTextarea"></textarea>
-                        <input class="btn_blue" type="button" value="提交">
-                    </li>
-                    <div class="clear"></div>
-                </ul>
-            </div>
+        <!-- 缺陷属性 -->
+        <div class="detailAttribute" ng-show="isAttribute==2">
+            <ul class="attributeList attributeList1 attributeList2 attributeList4">
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('提,交,者')">{{n}}</span>
+                    </span>
+                    <span class="attributeRight">humq</span>
+                </li>
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('创,建,时,间')">{{n}}</span>
+                    </span>
+                    <span class="attributeRight">2017-06-19 14:37</span>
+                </li>
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('缺,陷,类,别')">{{n}}</span>
+                    </span>
+                    <select class="selectBox">
+                        <option>功能性缺陷</option>
+                        <option>设计性缺陷</option>
+                    </select>
+                </li>               
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('缺,陷,等,级')">{{n}}</span>
+                    </span>
+                    <select class="selectBox">
+                        <option>低</option>
+                        <option>中</option>
+                        <option>高</option>
+                    </select>
+                </li>
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('项,目,模,块')">{{n}}</span>
+                    </span>
+                    <select class="selectBox">
+                        <option>登录模块</option>
+                        <option>注册模块</option>
+                    </select>
+                </li>
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('出,现,频,率')">{{n}}</span>
+                    </span>
+                    <select class="selectBox">
+                        <option>经常</option>
+                        <option>偶尔</option>
+                    </select>
+                </li>
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('当,前,状,态')">{{n}}</span>
+                    </span>
+                    <select class="selectBox">
+                        <option>经常</option>
+                        <option>偶尔</option>
+                    </select>
+                </li>
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('关,联,用,例')">{{n}}</span>
+                    </span>
+                    <select class="selectBox">
+                        <option>经常</option>
+                        <option>偶尔</option>
+                    </select>
+                </li>
+            </ul>
+        </div>
+        <div class="detailAttribute" ng-show="isAttribute==3">
             <table class="table-fullborder">
                 <tr>
-                    <th>操作人</th>
-                    <th>操作类别</th>
-                    <th>操作时间</th>
-                    <th>备注</th>
+                    <th>参数名称</th>
+                    <th>值</th>
+                    <th>是否只读</th>
+                    <th>描述</th>
+                    <th>复制数据字典项</th>
+                    <th>字典项值</th>
                 </tr>
                 <tr>
-                    <td>humq</td>
-                    <td>修改完成</td>
-                    <td>2016-03-04 19：00</td>
-                    <td>未评审</td>
+                    <td>1</td>
+                    <td>错误提示</td>
+                    <td>root</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
             </table>
         </div>
