--- a/app/tpls/modal/newDemand.html
+++ b/app/tpls/modal/newDemand.html
@@ -45,9 +45,9 @@
 		</ul>
 	</div>
 	<div class="modal-footer">
-		<div class="floatleft"><input class="floatleft" type="checkbox" name=""><em class="marginl_10">是否连续添加</em></div>
-		<button class="btn_blue" ng-click="ok()">确认</button>
-		<button class="btn_gray" ng-click="cancel()">返回</button>
+		<div class="floatleft defaultcheckBox"><input class="floatleft" type="checkbox" name=""><em>是否连续添加</em></div>
+		<input type="button" name="" value="确认" class="btndefault btndefault_blue" ng-click="ok()">
+		<input type="button" name="" value="返回" class="btndefault btndefault_gray" ng-click="ok()">
 	</div>	
 	</div>
 </div>
