--- a/app/tpls/home/main/testset/testsetManage.html
+++ b/app/tpls/home/main/testset/testsetManage.html
@@ -1,89 +1,43 @@
 <style type="text/css">
 </style>
-<div class="projectBodyBox">
+<div class="projectBodyBox" ng-controller="testSetCtrl">
     <div class="projectBodyTitle">
         测试集管理
     </div>
-    <div class="projectBodyContent">
-        <div class="useCaseTree"  ng-style="useCaseTreeStyle">
-            <div class="aricon_treenav" ng-click="treeHide()" ng-class="treeOut?'aricon_treenav1':'aricon_treenav2'">
-                <i class="aricon_treenav_a"></i>
+    <div class="useCaseListfunc clearfix">
+        <div class="dropdownDefault floatleft" dropdown>
+            <div dropdown-toggle class="dropdowntoggle">
+                <span class="dropdowntoggletext">需求状态</span>
+                <i class="iconfont icon-unfold"></i>
             </div>
-            <div class="title">测试集</div>
-            <div class="treeBody">
-                <div>
-                    <script type="text/ng-template" id="nodes_renderer.html">
-                        <div class="tree-node tree-node-content">
-                            <a class="treeToggle" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="toggle(this)"><img ng-src="{{collapsed?'images/treeBody_close.png':'images/treeBody_open.png'}}"></a>
-                            <span ng-show="!this.isEdit" class="treeText">
-                                {{node.title | limitTo:10}}{{node.title.length>5?'...':''}}
-                            </span>
-                            <div class="pull-right dropdownBox moreFuc treeIcon" dropdown>
-                                <span dropdown-toggle type="button" class="glyphicon glyphicon-cog"></span>
-                                <ul class="dropdown-menu" dropdown-menu role="menu">
-                                    <li><a ng-click="open()">上移</a></li>
-                                    <li><a>下移</a></li>
-                                    <li><a ng-click="open()">新建子模块</a></li>
-                                    <li><a ng-click="open()">删除</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}">
-                            <li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'">
-                            </li>
-                        </ol>
-                    </script>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div ui-tree="treeOptions" id="tree-root" drag-delay="200">
-                                <ol ui-tree-nodes ng-model="data">
-                                    <li ng-repeat="node in data" ui-tree-node ng-include="'nodes_renderer.html'"></li>
-                                </ol>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <ul class="dropdown-menu transition" dropdown-menu role="menu">
+                <span class="triangle"></span>
+                <li><i class="iconfont icon-addpeople_fill"></i><span>待处理</span></li>
+                <li><i class="iconfont icon-addpeople_fill"></i><span>已处理</span></li>
+            </ul>
         </div>
+    </div>
+    <div class="projectBodyContent" style="top: 100px;">
         <div class="useCaseList" style="bottom: 0px; overflow: auto;" ng-style="useCaseListStyle">
-            <div class="useCaseListTitle">组一</div>
-            <div class="userCaseListTable">
-                <table class="table-fullborder">
-                    <tr>
-                        <th>
-                            <input type="checkbox" name="">
-                        </th>
-                        <th>测试集名称</th>
-                        <th>描述</th>
-                        <th>操作</th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type="checkbox" name="">
-                        </td>
-                        <td ng-click="fadeIn();$event.stopPropagation();">
-                            <span class="text_ellipsis10 f_blue cursor_p">test08</span>
-                        </td>
-                        <td>测试集描述</td>
-                        <td>
-                            <a class="f_blue">编辑</a>
-                            <a class="f_blue">复制</a>
-                            <a class="f_blue">剪切</a>
-                            <a class="f_blue">粘贴</a>
-                            <a class="f_blue">发起执行</a>
-                            <a class="f_red">删除</a>
-                        </td>
-                    </tr>
-                </table>
-                <div class="floatright">
-                    <pagination boundary-links="true" total-items="totalItems" ng-model="currentPage" class="pagination-sm embed-responsive-item" previous-text="上一页" next-text="下一页" first-text="首页" last-text="尾页" max-size="maxSize" rotate="false">
-                    </pagination>
-                </div>
+            <div class="useCaseListfunction">
+                <span class="floatleft selectNum">已选中2项：</span>
+                <span class="chatIconButton">
+                    <i class="iconfont icon-guanlian"></i>复制
+                </span>                
+                <span class="chatIconButton">
+                    <i class="iconfont icon-brush_fill"></i>剪切
+                </span>
+                <span class="chatIconButton">
+                    <i class="iconfont icon-import"></i>粘贴
+                </span>
+                <span class="chatIconButton">
+                    <i class="iconfont icon-daochu2"></i>删除
+                </span>
+                <div class="clear"></div>
             </div>
-            <!-- <div ng-controller="editorCtrl" style="width:100%;margin-top:100px;">
-                <p>wangEditor 集成到 angular 的示例</p>
-                <div ng-model="text" contenteditable="true"></div>
-            </div> -->
+            <div class="userCaseListTable">
+                <div ui-grid="gridOptionsTestset"  ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
+            </div>
         </div>
     </div>
 </div>
