--- a/app/tpls/home/main/usecase/projectUsecaseDetail.html
+++ b/app/tpls/home/main/usecase/projectUsecaseDetail.html
@@ -1,110 +1,152 @@
 <style type="text/css">
-
 </style>
-<div class="projectBodyBox">
-	<div class="projectBodyTitle">
-		需求名字
-		<div class="floatright">
-			<input type="button" class="floatright btn_gray" name="" id="" value="返回" ng-click="back()" />
-		</div>
-	</div>
-	<div class="projectBodyContent">
-		<div class="personalNav" style="height: 60px;">
-			<ul style="margin-top: 20px;margin-right: 0;">
-				<li ng-class="{current:isAttribute==0}">
-					<a href="" class="cursor_p" ng-click="isAttribute=0">需求内容</a>
-				</li>
-				<li ng-class="{current:isAttribute==1}">
-					<a href="" class="cursor_p" ng-click="isAttribute=1">用例场景</a>
-				</li>
-				<li ng-class="{current:isAttribute==2}">
-					<a href="" class="cursor_p" ng-click="isAttribute=2">需求链接</a>
-				</li>
-				<div class="clear"></div>
-			</ul>
-			<div class="clear"></div>
-		</div>	
-		<div class="bugDetailBox">		
-			<div class="attribute" ng-show="isAttribute==0">
-				<div class="demandContent floatleft">
-					<div class="attributeTitle">
-						需求描述
-					</div>
-					<div class="attributeP">从1962年诞生的第一台虚拟现实设备Sensorama开始算，虚拟现实已经走过了54个年头。随着2016年初阿里巴巴近8亿美元投资Magic Leap，中国的“VR创业潮”正式拉开了帷幕，2016年也被称为中国虚拟现实的元年，这期间涌现了大量的创业公司，其中不乏佼佼者，逐渐走上了引领世界VR发展的道路。
-						<p>从1962年诞生的第一台虚拟现实设备Sensorama开始算，虚拟现实已经走过了54个年头,从1962年诞生的第一台虚拟现实设备Sensorama开始算，虚拟现实已经走过了54个年头</p>
-						<p>从1962年诞生的第一台虚拟现实设备Sensorama开始算，虚拟现实已经走过了54个年头</p>
-					</div>
-					<div class="attributeTitle">
-						功能点 ：
-						<a href=""> ㊉ </a>
-					</div>
-					<table class="table-fullborder">
-						<tr>
-							<th>序号</th>
-							<th>功能名称</th>
-							<th>功能描述</th>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td><span class="text_ellipsis10 ">功能名称名称</span></td>
-							<td><span class="text_ellipsis10 ">功能描述描述</span></td>
-						</tr>
-						<tr>
-							<td>2</td>
-							<td><span class="text_ellipsis10 ">功能名称名称</span></td>
-							<td><span class="text_ellipsis10 ">功能描述描述</span></td>
-						</tr>
-					</table>
-				</div>
-				<div class="demandAttribute floatright">
-					<div class="attributeTitle">
-						属性
-					</div>
-					<ul class="attributeP">
-						<li>需求名称：名称名称名称名称</li>
-						<li>创建人：hmq</li>
-						<li>创建时间：2016-12-2 19：00</li>
-						<li>最后修改人：hmq1</li>
-						<li>最后修改时间：2016-12-12 19：00：00</li>
-						<li>需求负责人：hmq2</li>
-						<li>需求编号：00016</li>
-						<li>需求来源：自创建</li>
-						<li>需求状态：已建议</li>
-						<li>需求类型：普通需求</li>
-					</ul>
-				</div>
-			</div>
-			<div class="attribute" ng-show="isAttribute==1">
-				<div class="attributeTitle" ng-controller="modalCtrl">
-					<input class="fbtn_blue" type="button" name="" id="" value="新增场景" ng-click="open('addNewScene','lg')" />
-				</div>
-				<table class="table-fullborder">
-					<tr>
-						<th>场景名称</th>
-						<th>创建人</th>
-						<th>创建时间</th>
-						<th>关联用例</th>
-						<th>关联缺陷</th>
-						<th>操作</th>
-					</tr>
-					<tr>
-						<td title="财务管理财务管理财务管理财务管理财务管理财务管理财务管理财务管理财务管理"><span class="text_ellipsis8">财务管理财务管理财务管理财务管理财务管理财务管理财务管理财务管理财务管理</span></td>
-						<td>hmq</td>
-						<td>2017-06-08 19:00</td>
-						<td>5</td>
-						<td>2</td>
-						<td ng-controller="modalCtrl">
-							<a href="" class="f_blue" ng-click="">场景设计</a>
-							<a href="" class="f_blue" ng-click="">用例设计</a>
-						</td>
-					</tr>
-				</table>
-			</div>
-			<div class="attribute" ng-show="isAttribute==2">
-
-				333333333333333333333333
-			</div>
-		</div>
-	</div>
-
+<div class="projectDetailBox">
+    <div class="detailTitle">
+        <span class="floatleft bugId">233</span>
+        <span class="bugName text_ellipsis">用例名称</span>
+        <input type="button" class="btndefault btndefault_blue floatright" name="" value="保存">
+    </div>
+    <div class="bugDetailBox" ng-init="isAttribute=1">
+        <div class="tab">
+            <span ng-class="{current:isAttribute==1}" ng-click="isAttribute=1">缺陷描述</span>
+            <span ng-class="{current:isAttribute==2}" ng-click="isAttribute=2">缺陷属性</span>
+            <span ng-class="{current:isAttribute==3}" ng-click="isAttribute=3">操作历史</span>
+        </div>
+        <!-- 缺陷描述 -->
+        <div class="detailAttribute" ng-show="isAttribute==1" bn-document-click="addDescribe=false">
+            <div class="addDescribe" ng-class="{addDescribeopen:addDescribe}" ng-click="$event.stopPropagation();addDescribe=true">
+                <textarea placeholder="追加描述"></textarea>
+                <i class="iconfont icon-bianji"></i>
+                <div class="addDescribeFunc">
+                    <div class="flex"></div>
+                    <input ng-click="event.stopPropagation();" type="button" name="" class="btndefault btndefault_blue floatright" value="追加描述">
+                </div>
+            </div>
+            <div class="describeBox">
+                <div class="describeTitle">
+                    缺陷描述
+                </div>
+                <div class="describeList">
+                    <div class="describeListLi">
+                        <i class="iconfont icon-bianji"></i> 【aiyina】添加描述：evalbert 修改任务隶属项目 原隶属项目：纯纯粹粹-由evalbert复制 新隶属项目：纯纯粹粹
+                        <span class="describeListLiTime">2017-06-19 19:00</span>
+                    </div>
+                </div>
+            </div>
+            <div class="describeBox">
+                <div class="describeTitle">
+                    缺陷附件
+                </div>
+                <div class="describeList fileuploadBox">
+                    <div class="fileselectBox">
+                        <div class="floatleft btn_add btn_addfile"><span class="cicleicon"><i class="iconfont icon-createtask"></i></span>选择文件
+                            <input class="inputfile" type="file" value="选择文件">
+                        </div>
+                        <span class="floatright">文件最大不超过30M</span>
+                    </div>
+                    <ul class="fileList">
+                        <li ng-repeat="v in range(2) track by $index">
+                            <span class="fileIcon fileIcon-doc"></span>
+                            <div class="fileName">
+                                测试需求文档.doc
+                                <i class="iconfont icon-close"></i>
+                            </div>
+                            <div class="fileFooter">
+                                <div class="fileSize">
+                                    <div class="progress progressDefault" ng-hide="fileuploadSize==-1;">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{fileuploadSize+'%'}}">
+                                            {{fileuploadSize+'%'}}
+                                        </div>
+                                    </div>
+                                    <div class="size" ng-show="fileuploadSize==-1;">180kb
+                                        <div class="filemoreFunc dropdownDefault floatright treefunicon" dropdown>
+                                            <i class="iconfont icon-gengduo floatright tooltipdefaulticon" dropdown-toggle></i>
+                                            <ul class="dropdown-menu dropdown-menu-right transition" dropdown-menu role="menu">
+                                                <span class="triangle"></span>
+                                                <li><i class="iconfont icon-addpeople_fill"></i><span>下载</span></li>
+                                                <li><i class="iconfont icon-addpeople_fill"></i><span>删除</span></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- 缺陷属性 -->
+        <div class="detailAttribute" ng-show="isAttribute==2">
+            <ul class="attributeList attributeList2">
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('提,交,者')">{{n}}</span>
+                    </span>
+                    <span class="attributeRight">spasvospasvospasvospasvospasvospasvospasvo</span>
+                </li>
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('缺,陷,类,别')">{{n}}</span>
+                    </span>
+                    <span class="attributeRight">功能建议</span>
+                </li>
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('创,建,时,间')">{{n}}</span>
+                    </span>
+                    <span class="attributeRight">2017-06-19 14:37</span>
+                </li>
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('缺,陷,等,级')">{{n}}</span>
+                    </span>
+                    <span class="attributeRight">低级</span>
+                </li>
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('项,目,模,块')">{{n}}</span>
+                    </span>
+                    <span class="attributeRight">全部模块</span>
+                </li>
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('出,现,频,率')">{{n}}</span>
+                    </span>
+                    <span class="attributeRight">经常</span>
+                </li>
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('当,前,状,态')">{{n}}</span>
+                    </span>
+                    <span class="attributeRight">驳回</span>
+                </li>
+                <li>
+                    <span class="attributeLeft">
+                        <span  ng-repeat="n in turnArray('关,联,用,例')">{{n}}</span>
+                    </span>
+                    <span class="attributeRight">测试用例一</span>
+                </li>
+            </ul>
+        </div>
+        <div class="detailAttribute" ng-show="isAttribute==3">
+            <table class="table-fullborder">
+                <tr>
+                    <th>参数名称</th>
+                    <th>值</th>
+                    <th>是否只读</th>
+                    <th>描述</th>
+                    <th>复制数据字典项</th>
+                    <th>字典项值</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>错误提示</td>
+                    <td>root</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </div>
