--- a/app/tpls/home/main/usecase/projectUsecaseManage.html
+++ b/app/tpls/home/main/usecase/projectUsecaseManage.html
@@ -1,119 +1,58 @@
 <style type="text/css">
 </style>
-<div class="projectBodyBox">
-	<div class="projectBodyTitle">
-		项目模块
-		<div class="floatright dropdownBox" dropdown>
-			<input dropdown-toggle type="button" class="btn_gray dropdownToggle" value="更多操作">
-			<ul class="dropdown-menu" dropdown-menu role="menu">
-				<li>
-					<a>导出用例</a>
-				</li>
-				<li>
-					<a>导入用例</a>
-				</li>
-			</ul>
-		</div>
-		<div class="floatright" ng-controller="modalCtrl">
-			<input class="btn_gray " type="button" name="" id="" value="提需求" ng-click="open('newDemand','lg')" />
-		</div>
-	</div>
-	<div class="projectBodyContent">		
-		<div class="useCaseTree" ng-style="useCaseTreeStyle">	
-			<div class="aricon_treenav" ng-click="treeHide()" ng-class="treeOut?'aricon_treenav1':'aricon_treenav2'">
-                <i class="aricon_treenav_a"></i>
+<div class="projectBodyBox" ng-controller="modalCtrl">
+    <div class="projectBodyTitle">
+        用例管理
+    </div>
+    <div class="useCaseListfunc clearfix">
+        <div class="dropdownDefault floatleft" dropdown>
+            <div dropdown-toggle class="dropdowntoggle">
+                <span class="dropdowntoggletext">用例状态</span>
+                <i class="iconfont icon-unfold"></i>
             </div>
-			<div class="title">用例组</div>			
-			<div class="treeBody">
-				<div>
-					<script type="text/ng-template" id="nodes_renderer.html">
-						<div class="tree-node tree-node-content">
-							<a class="treeToggle" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="toggle(this)"><img ng-src="{{collapsed?'images/treeBody_close.png':'images/treeBody_open.png'}}"></a>
-							<span ng-show="!this.isEdit" class="treeText">
-                                {{node.title | limitTo:10}}{{node.title.length>5?'...':''}}
-                            </span>
-							<div class="floatright dropdownBox moreFuc treeIcon" dropdown>
-								<span dropdown-toggle type="button" class="glyphicon glyphicon-cog"></span>
-								<ul class="dropdown-menu" dropdown-menu role="menu">
-									<li>
-										<a ng-click="open()">上移</a>
-									</li>
-									<li>
-										<a>下移</a>
-									</li>
-									<li>
-										<a ng-click="open()">新建子模块</a>
-									</li>
-									<li>
-										<a ng-click="open()">删除</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}">
-							<li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'">
-							</li>
-						</ol>
-					</script>
-					<div class="row">
-						<div class="col-sm-12">
-							<div ui-tree="treeOptions" id="tree-root" drag-delay="200">
-								<ol ui-tree-nodes ng-model="data">
-									<li ng-repeat="node in data" ui-tree-node ng-include="'nodes_renderer.html'"></li>
-								</ol>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="useCaseList " style="bottom:0px;overflow-y: auto;" ng-style="useCaseListStyle">
-			<div class="useCaseListTitle clearfix">
-				<div class="floatleft">需求的名称</div>
-				<div class="searchBox floatright">
-					<input class="floatleft inputSearch ng-pristine ng-valid" type="text" ng-model="searchDate.bugName" placeholder="请输入需求名称或ID">
-					<img class="btnSearch" src="/images/searchBox_btnSearch.png" ng-click="searchBug()">
-					<div class="clear"></div>
-				</div>
-			</div>
-			<div class="userCaseListTable">
-				<table class="table-fullborder">
-					<tr>
-						<th>标识</th>
-						<th>需求名称</th>
-						<th>创建人</th>
-						<th>创建时间</th>
-						<th>需求状态</th>
-						<th>优先级</th>
-						<th>指派</th>
-						<th>关联用例数</th>
-						<th>操作</th>
-					</tr>
-					<tr>
-						<td>1.0-1</td>
-						<td ui-sref="index.demandDetails"><span class="text_ellipsis10 f_blue cursor_p ">用户注册</span></td>
-						<td>humq</td>
-						<td>2016-12-2 19：00</td>
-						<td>已建议</td>
-						<td>中</td>
-						<td>wxw</td>
-						<td>2</td>
-						<td>
-							<a class="f_blue" ng-click="open()">指派</a>
-							<a class="f_blue">创建用例</a>
-						</td>
-					</tr>
-
-				</table>
-				<div class="floatright">
-					<pagination boundary-links="true" total-items="totalItems" ng-model="currentPage" class="pagination-sm embed-responsive-item" previous-text="上一页" next-text="下一页" first-text="首页" last-text="尾页" max-size="maxSize" rotate="false">
-					</pagination>
-				</div>
-			</div>
-			<!-- <div ng-controller="editorCtrl" style="width:100%;margin-top:100px;">
-                <p>wangEditor 集成到 angular 的示例</p>
-                <div ng-model="text" contenteditable="true"></div>
-            </div> -->
-		</div>
-	</div>
+            <ul class="dropdown-menu transition" dropdown-menu role="menu">
+                <span class="triangle"></span>
+                <li><i class="iconfont icon-addpeople_fill"></i><span>新增子节点</span></li>
+                <li><i class="iconfont icon-addpeople_fill"></i><span>新增同级节点</span></li>
+            </ul>
+        </div>
+        <div class="dropdownDefault floatleft" dropdown>
+            <div dropdown-toggle class="dropdowntoggle">
+                <span class="dropdowntoggletext">筛选</span>
+                <i class="iconfont icon-unfold"></i>
+            </div>
+            <ul class="dropdown-menu transition" dropdown-menu role="menu">
+                <span class="triangle"></span>
+                <li><i class="iconfont icon-addpeople_fill"></i><span>新增子节点</span></li>
+                <li><i class="iconfont icon-addpeople_fill"></i><span>新增同级节点</span></li>
+            </ul>
+        </div>
+        <div class="floatright btn_add" ng-click="open('newDemand','lg')">
+            <span class="cicleicon"><i class="iconfont icon-add"></i></span> 提需求
+        </div>
+    </div>
+    <div class="projectBodyContent" style="top: 100px;" ng-controller="usecaseCtrl">
+        <div class="useCaseList " style="bottom:0px;overflow-y: auto;" ng-style="useCaseListStyle">
+            <div class="useCaseListfunction">
+                <span class="floatleft selectNum">已选中2项：</span>
+                <span class="chatIconButton">
+                    <i class="iconfont icon-guanlian"></i>关联用例
+                </span>                
+                <span class="chatIconButton">
+                    <i class="iconfont icon-brush_fill"></i>修改处理人
+                </span>
+                <span class="chatIconButton floatright">
+                    <i class="iconfont icon-import"></i>导入
+                </span>
+                <span class="chatIconButton floatright">
+                    <i class="iconfont icon-daochu2"></i>导出
+                </span>
+                <div class="clear"></div>
+            </div>
+            <div class="userCaseListTable">
+                <div style="" ui-grid="gridOptionsUsecase" ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
+            </div>
+            
+        </div>
+    </div>
 </div>
